# fundus

./: .gitignore  CONTRIBUTING.md  LICENCE  MANIFEST.in  README.md  complete.html  demo_fundus.py  incomplete.html  output.txt  pyproject.toml  repubblica_articles.json  repubblica_test.ipynb  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.html  test.py  test.py~  test_nation.html
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.yaml  proposal.yaml  question.yaml
.github/workflows/: black.yml  docstr_coverage.yaml  documentation.yaml  lint.yml  publish-package.yml  publisher_coverage.yaml  pytest.yml  python-app.yml  ruff.yml  tests.yml
common_crawl/: crawler.py
doc/: attribute_guidelines.md  how_to_contribute.md  supported_news.md
docs/: 1_getting_started.md  2_crawl_from_cc_news.md  2_the_article_class.md  3_how_to_filter_articles.md  3_the_article_class.md  4_how_to_filter.md  4_how_to_filter_articles.md  4_how_to_search_for_publishers.md  5_advanced_topics.md  5_how_to_search_for_publishers.md  6_logging.md  __init__.py  attribute_guidelines.md  how_to_add_a_parser.md  how_to_add_a_publisher.md  how_to_contribute.md  supported_news.md  supported_publishers.md
eval/html/Reuters_0.html/: Reuters_0.html
examples/: example_cc_crawler.py  example_crawler.py  example_parser.py  example_parser_new.py  example_pasrer.py  example_stream.py
html_parser/: base_parser.py
recipes/: update_readme.py
resources/logo/: styleguide.txt
scripts/: add_publisher.py  check_coverage.py  generate_parser_test_files.py  generate_tables.py  publisher_coverage.py  test.html  utility.py
src/: __init__.py  scratch.py  test.py
src/common_crawl/: crawler.py  iterator.py
src/crawler/: articles.py  crawler.py  pipelines.py  sources.py
src/crawler/common_crawl/: crawler.py
src/custom_types/: generics.py  structural_typing.py
src/fundus/: __init__.py  classification.py  logging.py  user_feedback.py
src/fundus/logging/: __init__.py  context.py  logger.py
src/fundus/parser/: __init__.py  base_parser.py  data.py  test.html  utility.py
src/fundus/publishers/: __init__.py  base_objects.py  collections.py  collections.pyi  test.py
src/fundus/publishers/at/: __init__.py  derstandard.py  die_presse.py  kleine_zeitung.py  orf.py  salzburger_nachrichten.py
src/fundus/publishers/au/: __init__.py  nine_news.py  west_australian.py
src/fundus/publishers/be/: __init__.py  nieuwsblad.py  politico_eu.py
src/fundus/publishers/ca/: __init__.py  canada_com.py  cbc_news.py  financial_post.py  global_news.py  globe_and_mail.py  national_post.py  ottawa_citizen.py  the_province.py
src/fundus/publishers/ch/: __init__.py  nzz.py  srf.py  ta.py  tages_anzeiger.py  zwanzig_minuten.py
src/fundus/publishers/cn/: __init__.py  people.py
src/fundus/publishers/cz/: __init__.py  seznam_zpravy.py  seznamzpravy.py
src/fundus/publishers/de/: __init__.py  afp_faktencheck.py  berliner_zeitung.py  bild.py  br.py  dw.py  (+55 more)
src/fundus/scraping/: article.py  classification.py  crawler.py  delay.py  filter.py  html.py  pipeline.py  publication.py  scraper.py  session.py  source.py  source_url.py  url.py
src/fundus/utils/: DocumentType.py  article_classification.py  caching.py  concurrency.py  custom_robot_file_parser.py  events.py  generate_tables.py  iteration.py  more_async.py  regex.py  serialization.py  tables.py  timeout.py  timing.py  validation.py
src/html_parser/: base_parser.py  utility.py
src/logging/: logger.py
src/parser/html_parser/: __init__.py  base_parser.py  data.py  utility.py
src/parser_lib/de_de/: bz_parser.py  die_welt_parser.py  dw_parser.py  focus_parser.py  mdr_parser.py  merkur_parser.py  ndr_parser.py  ntv_parser.py
src/parsing/: __init__.py  base_parser.py  utility.py
src/pipeline/: articles.py  pipeline.py  sources.py
src/publishers/: __init__.py
src/publishers/at/: __init__.py
src/publishers/de/: __init__.py
src/publishers/us/: __init__.py
src/scraping/: article.py  crawler.py  pipeline.py  scraper.py  source.py
src/scraping/crawler/: crawler.py
src/utils/: error_states.py  root.py  tables.py  validation.py
src/web_crawl/: focus_crawler.py
stream/: __init__.py  layer.py  monitoring.py  process.py  streamline.py  streampool.py  utils.py
tests/: README.md  check_coverage.py  conftest.py  exceptions.py  test_article.py  test_collection.py  test_crawler.py  test_data.py  test_events.py  test_filter.py  test_ha_css.py  test_hamburger_abendblatt.py  test_parser.py  test_parsing.py  test_pipeline.py  test_publisher_collection.py  test_session_handler.py  test_theMirror.py  test_utility.py  utility.py  validationStep4.py
tests/fixtures/: builders.py  fakes.py  fixture_collection.py  fixture_parser.py  fixture_server.py  fixture_source.py
tests/parser/: test_data.py  test_parser.py
tests/publishers/: conftest.py  test_base_objects.py  test_init.py  test_parser_coverage.py
tests/resources/: APNews.json  BerlinerZeitung.json  DieZeit.json  FAZ.json  FoxNews.json  Merkur.json  Stern.json  WashingtonTimes.json  __init__.py  iso_639_codes.txt  test_events.py
tests/resources/parser/: attribute_annotations.py
tests/ressources/: BerlinerZeitung.json  BerlinerZeitungParser.html  BerlinerZeitungParser.json  DW.html  DW.json  DWParser.html  DWParser.json  DieWelt.html  DieWelt.json  DieWeltParser.html  DieWeltParser.json  DieZeit.json  DieZeitParser.html  DieZeitParser.json  FAZ.html  FAZ.json  FAZParser.html  FAZParser.json  Focus.html  Focus.json  FocusParser.html  FocusParser.json  MDR.json  MDRParser.html  MDRParser.json  Merkur.html  Merkur.json  MerkurParser.html  MerkurParser.json  ORF.html  ORF.json  SPONParser.html  SPONParser.json  SZ.html  SZ.json  SZParser.html  SZParser.json  SpiegelOnline.html  SpiegelOnline.json  Tagesschau.json  (+2 more)
tests/scraping/: test_article.py  test_filter.py  test_html.py  test_session.py  test_url.py
tests/scraping/crawler/: conftest.py  test_base.py  test_ccnews.py  test_integration.py  test_queueing.py  test_web.py
tests/utils/: test_serialization.py  test_timeout.py
(+406 files in other folders)
