[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fundus"
version = "0.1.0"
authors = [
    { name = "Max Dallabetta", email = "max.dallabetta@googlemail.com" },
]
description = "A very simple news crawler"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research"

]
keywords = ["web scraping, web crawling"]
license = { text = "MIT" }
dependencies = [
    "python-dateutil~=2.8.2",
    "lxml~=4.9.1",
    "more-itertools~=9.1.0",
    "cssselect~=1.1.0",
    "feedparser~=6.0.10",
    "colorama~=0.4.4",
    "typing-extensions >= 4.0, < 5.0",
    "langdetect~=1.0.9",
    "aiohttp~=3.8.4",
    "aioitertools~=0.11.0",
    "validators~=0.20.0",
    "requests~=2.28.2"
]

[project.urls]
"Repository" = "https://github.com/flairNLP/fundus"

[project.optional-dependencies]
dev = [
    "pytest~=7.2.2",
    "mypy==1.1.1",
    "isort==5.12.0",
    "black==23.1.0",
    # type stubs
    "types-lxml~=2023.2.11",
    "types-python-dateutil~=2.8.19.10",
    "types-requests~=2.28.11.15",
    "types-colorama~=0.4.15.8",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
