[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fundus"
version = "0.5.5"
authors = [
    { name = "Max Dallabetta", email = "max.dallabetta@googlemail.com" },
]
description = "A very simple news crawler"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research"

]
keywords = ["web scraping, web crawling"]
license = { text = "MIT" }
dependencies = [
    "python-dateutil>=2.8, <3",
    "lxml>=4.9, <6",
    "more-itertools>=9.1, <10",
    "cssselect>=1.1, <2",
    "feedparser>=6.0, <7",
    "colorama>=0.4, <1",
    "typing-extensions>=4.6, <5",
    "langdetect>=1.0, <2",
    "validators>=0.24, <1",
    "requests>=2.28, <3",
    "tqdm>=4.66, <5",
    "fastwarc>=0.14, <1",
    "chardet>=5.2, <6",
    "dill>=0.3, <1",
    "dict2xml>=1.7.6, <2",
    "xmltodict>=0.13.0, <1",
    "bidict>=0.23, <1",
    "dateparser>=1.2.2, <2"
]

[project.urls]
"Repository" = "https://github.com/flairNLP/fundus"

[project.optional-dependencies]
dev = [
    "pytest~=7.2.2",
    "pyright==1.1.408",
    "ruff==0.15.6",
    # type stubs
    "types-lxml",
    "types-python-dateutil>=2.8, <3",
    "types-requests>=2.28, <3",
    "types-colorama>=0.4, <1",
    "types-dateparser>=1.2.0, <2",
    "types-xmltodict>=0.13.0, <1",
    "types-tqdm>=4.66, <5"
]

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "standard"
reportMissingImports = false

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
filterwarnings = [
    "error"
]

