[metadata]
name = fundus
description = A very simple news crawler
long_description = file: README.md
long_description_content_type= text/markdown
version = 0.0.1
url = https://github.com/flairNLP/fundus
author = Max Dallabetta
author_email = max.dallabetta@gmail.com


[options]
package_dir =
    =src
install_requires =
    dill~=0.3.5.1
    FastWARC~=0.12.2
    requests~=2.28.1
    ftfy~=6.1.1
    python-dateutil~=2.8.2
    lxml~=4.9.1
    dotmap~=1.3.30
    more-itertools~=8.14.0
    cssselect~=1.1.0
    feedparser~=6.0.10
    colorama~=0.4.4
    typing-extensions >= 4.0, < 5.0
python_requires = >=3.8
zip_safe = no

[options.extras_require]
dev =
    pytest~=7.2.2
    mypy~=1.1.1
    isort==5.12.0
    black==23.1.0
    # type stubs
    types-lxml~=2023.2.11
    types-python-dateutil~=2.8.19.10
    types-requests~=2.28.11.15
    types-colorama~=0.4.15.8
